with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 11.5.1

** Fixed bug with array of function
Given:

    cdecl> explain int x[5](double)
    declare f as function (double) returning int

cdecl (1) incorrectly elided the array and therefore (2) didn't report the
array of function as an error.


* Changes in Cdecl 11.5

** Better error/warning locations
Locations for error and warning messages have been improved.

** `show` error improvement
The `show` command now correctly prints all possible commands to define a type
when requested to show a type that doesn't exist.

** `register` warnings
A deprecated warning is now printed for a `register` array, enum, class,
struct, union, pointer, pointer to member, reference, and rvalue reference
between C++11 and C++14.  (Previously, a warning was printed only for built-in
types and typedefs.)

** K&R function parameter printed as `int`
For functions having K&R C typeless parameters, `int` is now printed in C89 and
later since such parameters are implicitly `int`.

** `show using` before C++11
A `show using` before C++11 now prints an error.

** Help output
Tweaked help output.


* Changes in Cdecl 11.4

** `_Atomic(T)` in C++23
Now supporting the `_Atomic(T)` macro in C++23.

** Fixed pointer to a `typedef` of `void`
Declarations like:

    typedef void V
    explain V *p

are now fixed.

** Allow declarations using unknown scoped type names
Previously, cdecl complained about things like:

    cdecl> define S as struct S
    cdecl> explain S::T x
                      ^
    19: error: "T": unknown name

Now, it just assumes the `T` is a type:

    declare x as T of structure S

** cvr-qualified `_Atomic`
`const`-`volatile`-`restrict`-qualified `_Atomic` types are now correctly
forbidden.


* Changes in Cdecl 11.3

** Added `explicit-ecsu` option
Both a `--explicit-ecsu`/`-S` command-line and `explicit-ecsu` set option have