@@ -1,0 +1,1 @@
+define f as function (int) returning void
